# solidworks2ROS2

./: README.md
solid2ROS/: package.xml  setup.cfg  setup.py
solid2ROS/config/: config.rviz  joint_names_robot_arm_urdf.yaml
solid2ROS/launch/: display.launch.py
solid2ROS/meshes/: Link_1.STL  Link_2.STL  Link_3.STL  Link_4.STL  Link_5.STL  Link_6.STL  Link_7.STL  base_link.STL
solid2ROS/urdf/: robot_arm_urdf.csv  robot_arm_urdf.urdf
solid2ROSmv/: .setup_assistant  CMakeLists.txt  package.xml
solid2ROSmv/config/: initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml  sensors_3d.yaml  solid2ROS.ros2_control.xacro  solid2ROS.srdf  solid2ROS.urdf.xacro
solid2ROSmv/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
