<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>solid2ROS</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="nikolay@mvnifest.com">nikorose</maintainer>
  <license>TODO: License declaration</license>

  <depend>tf2_ros</depend>
  <depend>rclpy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>gazebo</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
